--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,8 +12,8 @@ steps:
       npx playwright install --with-deps
       npx playwright test
       ls
-artifacts:
-  objects:
-    location: 'gs://${_BUCKET_NAME}/$TRIGGER_NAME'
-    paths:
-      - playwright-report/*
+# artifacts:
+#   objects:
+#     location: 'gs://${_BUCKET_NAME}/$TRIGGER_NAME'
+#     paths:
+#       - playwright-report/*
